--- a/breathing-exercise.html
+++ b/breathing-exercise.html
@@ -111,10 +111,10 @@
                 <label>音声オプション:</label>
                 <div class="radio-group">
                     <label class="radio-option">
-                        <input type="radio" name="sound-option" value="soundon" checked> 音楽付き
+                        <input type="radio" name="sound-option" value="soundon" checked> 時計の音
                     </label>
                     <label class="radio-option">
-                        <input type="radio" name="sound-option" value="clock"> 時計の音
+                        <input type="radio" name="sound-option" value="clock"> 音楽付き
                     </label>
                 </div>
             </div>
