--- a/breathing-exercise.html
+++ b/breathing-exercise.html
@@ -191,7 +191,7 @@
         <div class="progress" id="progress"></div>
         
         <div class="video-container">
-            <video id="video-player" controls="false"></video>
+            <video id="video-player" controls="false" playsinline></video>
         </div>
     </div>
 
